@@ -916,6 +916,16 @@
   address =	 {Bristol}
 }
 
+@Article{nerlove71,
+  author =	 {Nerlove, M.},
+  year =	 1971,
+  title =	 {Further Evidence on the Estimation of Dynamic Economic 
+                  Relations from a Time Series of Cross Sections},
+  journal =	 {Econometrica},
+  volume =	 39,
+  pages =	 {359--382}
+}
+
 @InCollection{nerlove99,
   author =	 {Nerlove, M.},
   year =	 1999,
