@@ -4203,6 +4203,9 @@ static int check_panel_options (gretlopt opt)
     } else if ((opt & OPT_T) && !(opt & OPT_W)) {
 	/* iterate option requires weighted least squares option */
 	return E_BADOPT;
+    } else if ((opt & OPT_N) && !(opt & OPT_U)) {
+	/* the nerlove option requires random effects */
+	return E_BADOPT;
     } else if (incompatible_options(opt, OPT_B | OPT_U | OPT_P)) {
 	/* mutually exclusive estimator requests */
 	return E_BADOPT;
